--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
     <main>
         <section class="sezione1">
-            <div></div>
+            <div class="main-content container"></div>
         </section>
-        <section class="sezione2">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+        <section class="sezione2 container">
+            <div class="row"></div>
+            <div class="slim-column"></div>
+            <div class="large-colum"></div>
+            <div class="slim-column"></div>
         </section>
     </main>
 
