--- a/index.html
+++ b/index.html
@@ -15,19 +15,21 @@
     </header>
 
     <main>
-        <section class="sezione1">
+        <section>
             <div class="main-content container"></div>
         </section>
         <section class="sezione2 container">
-            <div class="row"></div>
-            <div class="slim-column"></div>
-            <div class="large-colum"></div>
-            <div class="slim-column"></div>
+            <div class="clearfix">
+                <div class="row"></div>
+                <div class="slim-column float-left"></div>
+                <div class="large-colum float-left"></div>
+                <div class="slim-column float-left"></div>
+            </div>
         </section>
     </main>
 
     <footer>
-        <div class="ftr">
+        <div class="ftr container">
 
         </div>
     </footer>
